--- a/Kitabisa Movie/Modules/Home/Cells/MovieTableViewCell.xib
+++ b/Kitabisa Movie/Modules/Home/Cells/MovieTableViewCell.xib
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -9,31 +10,32 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="148" id="KGk-i7-Jjw" customClass="MovieTableViewCell" customModule="Kitabisa_Movie" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="148"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="175" id="KGk-i7-Jjw" customClass="MovieTableViewCell" customModule="Kitabisa_Movie" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="175"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="148"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="175"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JLZ-Uc-uEE">
-                        <rect key="frame" x="16" y="8" width="288" height="132"/>
+                        <rect key="frame" x="16" y="8" width="288" height="159"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MU8-UW-32f">
-                                <rect key="frame" x="0.0" y="0.0" width="288" height="132"/>
+                                <rect key="frame" x="0.0" y="0.0" width="288" height="159"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QO0-wN-qqn" userLabel="View Image">
-                                        <rect key="frame" x="0.0" y="0.0" width="120" height="132"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="120" height="159"/>
                                         <subviews>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="KyX-1M-Gp2">
-                                                <rect key="frame" x="16" y="8" width="96" height="111"/>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img_placeholder-portrait" translatesAutoresizingMaskIntoConstraints="NO" id="KyX-1M-Gp2">
+                                                <rect key="frame" x="16" y="8" width="96" height="144"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="width" secondItem="KyX-1M-Gp2" secondAttribute="height" multiplier="32:37" id="TOQ-Wd-Llf"/>
+                                                    <constraint firstAttribute="width" secondItem="KyX-1M-Gp2" secondAttribute="height" multiplier="2:3" id="DLE-1C-mjW"/>
                                                 </constraints>
                                             </imageView>
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                         <constraints>
+                                            <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="KyX-1M-Gp2" secondAttribute="bottom" constant="7" id="3rh-ce-8pZ"/>
                                             <constraint firstAttribute="width" constant="120" id="CCq-h3-4pO"/>
                                             <constraint firstItem="KyX-1M-Gp2" firstAttribute="top" secondItem="QO0-wN-qqn" secondAttribute="top" constant="8" id="Mgc-yz-Pnq"/>
                                             <constraint firstItem="KyX-1M-Gp2" firstAttribute="leading" secondItem="QO0-wN-qqn" secondAttribute="leading" constant="16" id="ezY-J0-4Jy"/>
@@ -41,10 +43,10 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tB4-59-D6q" userLabel="View Information">
-                                        <rect key="frame" x="120" y="0.0" width="168" height="132"/>
+                                        <rect key="frame" x="120" y="0.0" width="168" height="159"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="Zoy-6d-PMr">
-                                                <rect key="frame" x="0.0" y="16" width="152" height="100"/>
+                                                <rect key="frame" x="0.0" y="16" width="152" height="127"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="James Bond" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="isi-zE-Bvj">
                                                         <rect key="frame" x="0.0" y="0.0" width="152" height="20"/>
@@ -65,7 +67,7 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZzK-HT-hna">
-                                                        <rect key="frame" x="0.0" y="48" width="152" height="52"/>
+                                                        <rect key="frame" x="0.0" y="48" width="152" height="79"/>
                                                         <string key="text">Britt-Marie, a woman in her sixties, decides to leave her husband and start anew. Having been housewife for most of her life and and living in small backwater town of Borg, there isn't many jobs available and soon she finds herself fending a youth football team.</string>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                         <nil key="textColor"/>
@@ -109,7 +111,10 @@
                 <outlet property="labelTitle" destination="isi-zE-Bvj" id="eTv-r3-gH8"/>
                 <outlet property="viewContainer" destination="JLZ-Uc-uEE" id="6Gr-dc-IKp"/>
             </connections>
-            <point key="canvasLocation" x="-104" y="-36"/>
+            <point key="canvasLocation" x="-104.34782608695653" y="-27.120535714285712"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="img_placeholder-portrait" width="341" height="512"/>
+    </resources>
 </document>
