--- a/Kitabisa Movie/Modules/MovieDetail/MovieDetail.storyboard
+++ b/Kitabisa Movie/Modules/MovieDetail/MovieDetail.storyboard
@@ -26,15 +26,15 @@
                                                 <rect key="frame" x="0.0" y="0.0" width="120" height="288"/>
                                                 <subviews>
                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="SUj-nL-ssv">
-                                                        <rect key="frame" x="16" y="8" width="96" height="111"/>
+                                                        <rect key="frame" x="0.0" y="8" width="112" height="168"/>
                                                         <constraints>
-                                                            <constraint firstAttribute="width" secondItem="SUj-nL-ssv" secondAttribute="height" multiplier="32:37" id="814-Dj-c6X"/>
+                                                            <constraint firstAttribute="width" secondItem="SUj-nL-ssv" secondAttribute="height" multiplier="2:3" id="Hsx-9k-EAB"/>
                                                         </constraints>
                                                     </imageView>
                                                 </subviews>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                 <constraints>
-                                                    <constraint firstItem="SUj-nL-ssv" firstAttribute="leading" secondItem="yeL-Ga-Ezc" secondAttribute="leading" constant="16" id="14i-Ot-Qix"/>
+                                                    <constraint firstItem="SUj-nL-ssv" firstAttribute="leading" secondItem="yeL-Ga-Ezc" secondAttribute="leading" id="14i-Ot-Qix"/>
                                                     <constraint firstAttribute="trailing" secondItem="SUj-nL-ssv" secondAttribute="trailing" constant="8" id="Kdk-eA-U1B"/>
                                                     <constraint firstAttribute="width" constant="120" id="MAe-Ef-CMg"/>
                                                     <constraint firstItem="SUj-nL-ssv" firstAttribute="top" secondItem="yeL-Ga-Ezc" secondAttribute="top" constant="8" id="v78-fI-YmK"/>
